--- a/knockout.jQueryMobile/packages.config
+++ b/knockout.jQueryMobile/packages.config
@@ -3,6 +3,8 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net452" />
   <package id="jQuery" version="2.1.4" targetFramework="net452" />
   <package id="jquery.TypeScript.DefinitelyTyped" version="2.1.4" targetFramework="net452" />
+  <package id="Knockout.Mapping" version="2.4.0" targetFramework="net452" />
+  <package id="knockout.mapping.TypeScript.DefinitelyTyped" version="0.2.8" targetFramework="net452" />
   <package id="knockout.TypeScript.DefinitelyTyped" version="1.1.6" targetFramework="net452" />
   <package id="knockoutjs" version="3.4.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
